# abstract-producer-consumer

./: BearGenerator.cpp  BearGenerator.h  BearToPingu.cpp  BearToPingu.h  CMakeLists.txt  PinguToKoal.cpp  PinguToKoal.h  ProducerConsumerMaster.cpp  ProducerConsumerMaster.h  README.md  main.cpp
